--- a/src/components/CardRulesComparison/CardRulesComparison.html
+++ b/src/components/CardRulesComparison/CardRulesComparison.html
@@ -1,55 +1,36 @@
 <ion-card class="card-rules-comparison">
     <div>
-      <img src="http://via.placeholder.com/350x150" alt="" />
+      <img [src]=mImageUrl alt="" />
       <ion-card-content class="card-content">
-        <span lang="ar" dir="rtl">والقريب هو قريب من قلب الشعب، ولكن الرحيم قريب من قلب الله.</span>
-        <span lang="en" dir="ltr">The just is close to the peaple&#39;s heart, but the merciful is close to the heart of God.</span>
+        <span lang="ar" dir="rtl">{{mTranslatedTitle}}</span>
+        <span lang="en" dir="ltr">{{mTitle}}</span>
 
         <ion-grid>
           <ion-row class="correct-example">
             <i class="far fa-check"></i>
-            <ion-col>
-              <i class="fal fa-ambulance"></i>
-              <p lang="ar" dir="rtl">سياره اسعاف</p>
-              <p lang="en" dir="ltr">Ambulance</p>
+            <ion-col *ngFor="let doItem of mDosArray">
+              <div  *ngIf="doItem.iconClass">
+                <i class="{{doItem.iconClass}}"></i>
+              </div>
+              <div *ngIf="!doItem.iconClass && doItem.image.url">
+                <img [src]=doItem.image.url alt="" />
+              </div>
+              <p lang="ar" dir="rtl">{{doItem.translated}}</p>
+              <p lang="en" dir="ltr">{{doItem.title}}</p>
             </ion-col>
-            <ion-col>
-              <i class="fal fa-user-md"></i>
-              <p lang="ar" dir="rtl">طبيب</p>
-              <p lang="en" dir="ltr">Docter</p>
-            </ion-col>
-            <ion-col>
-              <i class="fal fa-medkit"></i>
-              <p lang="ar" dir="rtl">إسعافات أولية</p>
-              <p lang="en" dir="ltr">First Aid</p>
-            </ion-col>
-            <ion-col>
-              <i class="fal fa-hospital"></i>
-              <p lang="ar" dir="rtl">مستشفى</p>
-              <p lang="en" dir="ltr">Hospital</p>
-            </ion-col>
+
           </ion-row>
           <ion-row class="incorrect-example">
             <i class="far fa-ban"></i>
-            <ion-col>
-              <i class="fal fa-thermometer-full"></i>
-              <p lang="ar" dir="rtl">حمة</p>
-              <p lang="en" dir="ltr">Fever</p>
-            </ion-col>
-            <ion-col>
-              <i class="fal fa-blind"></i>
-              <p lang="ar" dir="rtl">بليند</p>
-              <p lang="en" dir="ltr">Blind</p>
-            </ion-col>
-            <ion-col>
-              <i class="fal fa-bed"></i>
-              <p lang="ar" dir="rtl">نعسان</p>
-              <p lang="en" dir="ltr">Drowsy</p>
-            </ion-col>
-            <ion-col>
-              <i class="fal fa-sign-language"></i>
-              <p lang="ar" dir="rtl">جراثيم</p>
-              <p lang="en" dir="ltr">Germs</p>
+            <ion-col *ngFor="let dontItem of mDontsArray">
+              <div  *ngIf="dontItem.iconClass">
+                <i class="{{dontItem.iconClass}}"></i>
+              </div>
+              <div *ngIf="!dontItem.iconClass && dontItem.image.url">
+                <img [src]=dontItem.image.url alt="" />
+              </div>
+              <p lang="ar" dir="rtl">{{dontItem.translated}}</p>
+              <p lang="en" dir="ltr">{{dontItem.title}}</p>
             </ion-col>
           </ion-row>
         </ion-grid>
