--- a/src/components/CardMonth/CardMonth.html
+++ b/src/components/CardMonth/CardMonth.html
@@ -1,19 +1,19 @@
 <ion-card class="card-month">
-    <div>
-        <ion-card-content class="card-content" >
-        <span lang="ar" dir="rtl" >الصوت</span>
-        <span lang="en" dir="ltr" >February</span>
-
-        <ion-grid>
-            <ion-row>
-            <ion-col col-4>
-                <p lang="en" dir="ltr">2/14</p>
-            </ion-col>
-            <ion-col col-8>
-                Valentines Day
-            </ion-col>
-            </ion-row>
-        </ion-grid>
-        </ion-card-content>
-    </div>
+  <div *ngFor="let item of mDates">
+    <ion-card-content class="card-content" >
+      <ion-grid>
+        <ion-row>
+          <ion-col col-4>
+            <p lang="en" dir="ltr">{{item[0]}}</p>
+          </ion-col>
+          <ion-col col-4>
+            <p lang="en" dir="ltr">{{item[1]}}</p>
+          </ion-col>
+          <ion-col col-4>
+            <p lang="ar" dir="rtl">{{item[2]}}</p>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-card-content>
+  </div>
 </ion-card>
