Update CardMonth with right columns #15

--- a/src/components/CardMonth/CardMonth.html
+++ b/src/components/CardMonth/CardMonth.html
@@ -3,14 +3,12 @@
     <ion-card-content class="card-content" >
       <ion-grid>
         <ion-row>
-          <ion-col col-4>
+          <ion-col>
             <p lang="en" dir="ltr">{{item[0]}}</p>
           </ion-col>
-          <ion-col col-4>
-            <p lang="en" dir="ltr">{{item[1]}}</p>
-          </ion-col>
-          <ion-col col-4>
+          <ion-col>
             <p lang="ar" dir="rtl">{{item[2]}}</p>
+            <p lang="en" dir="ltr">{{item[1]}}</p>
           </ion-col>
         </ion-row>
       </ion-grid>
